
bin_PROGRAMS=openredalert

openredalert_SOURCES= \
	src/OpenRedAlert.cpp \
    src/audio/SoundBuffer.h \
    src/audio/SoundCache.h \
    src/audio/SoundCacheCleaner.hpp \
    src/audio/SoundCommon.h \
    src/audio/SoundEngine.cpp \
    src/audio/SoundEngine.h \
    src/audio/SoundError.cpp \
    src/audio/SoundError.h \
    src/audio/SoundFile.cpp \
    src/audio/SoundFile.h \
    src/audio/SoundUtils.cpp \
    src/audio/SoundUtils.h \
    src/audio/SOUND_DECODE_STATE.h \
    src/game/ActionEvent.cpp \
    src/game/ActionEvent.h \
    src/game/ActionEventQueue.cpp \
    src/game/ActionEventQueue.h \
    src/game/Ai.cpp \
    src/game/Ai.h \
    src/game/AiCommand.cpp \
    src/game/AiCommand.h \
    src/game/AiRules.h \
    src/game/animinfo_t.h \
    src/game/anim_nfo.h \
    src/game/armour_t.h \
    src/game/BarrelExplosionActionEvent.cpp \
    src/game/BarrelExplosionActionEvent.h \
    src/game/BAttackAnimEvent.cpp \
    src/game/BAttackAnimEvent.h \
    src/game/BExplodeAnimEvent.cpp \
    src/game/BExplodeAnimEvent.h \
    src/game/BQTimer.cpp \
    src/game/BQTimer.h \
    src/game/BQueue.cpp \
    src/game/BQueue.h \
    src/game/BRepairUnitAnimEvent.cpp \
    src/game/BRepairUnitAnimEvent.h \
    src/game/BTurnAnimEvent.cpp \
    src/game/BTurnAnimEvent.h \
    src/game/BuildAnimEvent.cpp \
    src/game/BuildAnimEvent.h \
    src/game/BuildingAnimEvent.cpp \
    src/game/BuildingAnimEvent.h \
    src/game/CellTrigger.h \
    src/game/CncMap.cpp \
    src/game/CnCMap.h \
    src/game/Comp.cpp \
    src/game/Comp.h \
    src/game/ConStatus.h \
    src/game/DataLoader.cpp \
    src/game/DataLoader.h \
    src/game/Dispatcher.cpp \
    src/game/Dispatcher.h \
    src/game/DispatchLogState.h \
    src/game/DoorAnimEvent.cpp \
    src/game/DoorAnimEvent.h \
    src/game/ExplosionAnim.cpp \
    src/game/ExplosionAnim.h \
    src/game/FibHeapEntry.cpp \
    src/game/FibHeapEntry.h \
    src/game/Game.cpp \
    src/game/Game.h \
    src/game/GameError.cpp \
    src/game/GameError.h \
    src/game/GameMode.h \
    src/game/GlobalClearTriggerAction.cpp \
    src/game/GlobalClearTriggerAction.h \
    src/game/GlobalSetTriggerAction.cpp \
    src/game/GlobalSetTriggerAction.h \
    src/game/InfantryGroup.cpp \
    src/game/InfantryGroup.h \
    src/game/KeyComp.cpp \
    src/game/KeyComp.h \
    src/game/L2Overlay.cpp \
    src/game/L2Overlay.h \
    src/game/LoadMapError.cpp \
    src/game/LoadMapError.h \
    src/game/LOADSTATE.h \
    src/game/LoopAnimEvent.cpp \
    src/game/LoopAnimEvent.h \
    src/game/MiniMapClipping.h \
    src/game/MissionData.cpp \
    src/game/MissionData.h \
    src/game/MissionMapsClass.cpp \
    src/game/MissionMapsClass.h \
    src/game/MissionTheater.cpp \
    src/game/MissionTheater.h \
    src/game/MoneyCounter.cpp \
    src/game/MoneyCounter.h \
    src/game/MoveAnimEvent.cpp \
    src/game/MoveAnimEvent.h \
    src/game/movement.h \
    src/game/MultiPlayerMaps.cpp \
    src/game/MultiPlayerMaps.h \
    src/game/NoActionTriggerAction.cpp \
    src/game/NoActionTriggerAction.h \
    src/game/Path.cpp \
    src/game/Path.h \
    src/game/Player.cpp \
    src/game/Player.h \
    src/game/PlayerPool.cpp \
    src/game/PlayerPool.h \
    src/game/PowerInfo.h \
    src/game/ProcAnimEvent.cpp \
    src/game/ProcAnimEvent.h \
    src/game/Production.h \
    src/game/Projectile.cpp \
    src/game/Projectile.h \
    src/game/ProjectileAnim.cpp \
    src/game/ProjectileAnim.h \
    src/game/ProjectileData.cpp \
    src/game/ProjectileData.h \
    src/game/ProjectileDataList.cpp \
    src/game/ProjectileDataList.h \
    src/game/pside.h \
    src/game/Queue.h \
    src/game/RadarAnimEvent.cpp \
    src/game/RadarAnimEvent.h \
    src/game/RawTriggerAction.cpp \
    src/game/RawTriggerAction.h \
    src/game/RA_Tigger.h \
    src/game/RedAlertDataLoader.cpp \
    src/game/RedAlertDataLoader.h \
    src/game/RefineAnimEvent.cpp \
    src/game/RefineAnimEvent.h \
    src/game/RepairAnimEvent.cpp \
    src/game/RepairAnimEvent.h \
    src/game/RQstate.h \
    src/game/SnowMissionTheater.cpp \
    src/game/SnowMissionTheater.h \
    src/game/structure.cpp \
    src/game/Structure.h \
    src/game/StructureType.cpp \
    src/game/StructureType.h \
    src/game/talkback.cpp \
    src/game/Talkback.h \
    src/game/TalkbackType.h \
    src/game/TextTriggerAction.cpp \
    src/game/TextTriggerAction.h \
    src/game/TileRef.h \
    src/game/Trigger.cpp \
    src/game/Trigger.hpp \
    src/game/TriggerAction.cpp \
    src/game/TriggerAction.h \
    src/game/TriggerManager.cpp \
    src/game/TriggerManager.hpp \
    src/game/triggers.cpp \
    src/game/triggers.h \
    src/game/TurnAnimEvent.cpp \
    src/game/TurnAnimEvent.h \
    src/game/UAttackAnimEvent.cpp \
    src/game/UAttackAnimEvent.h \
    src/game/UHarvestEvent.cpp \
    src/game/UHarvestEvent.h \
    src/game/UInfiltrateAnimEvent.cpp \
    src/game/UInfiltrateAnimEvent.h \
    src/game/Unit.cpp \
    src/game/Unit.hpp \
    src/game/UnitAndStructureMat.h \
    src/game/unitandstructurepool.cpp \
    src/game/UnitAndStructurePool.h \
    src/game/UnitAnimEvent.cpp \
    src/game/UnitAnimEvent.h \
    src/game/UnitOrStructure.cpp \
    src/game/UnitOrStructure.h \
    src/game/UnitOrStructureType.cpp \
    src/game/UnitOrStructureType.h \
    src/game/UnitType.cpp \
    src/game/UnitType.h \
    src/game/unittypes.h \
    src/game/URepairEvent.cpp \
    src/game/URepairEvent.h \
    src/game/WalkAnimEvent.cpp \
    src/game/WalkAnimEvent.h \
    src/game/Warhead.cpp \
    src/game/Warhead.h \
    src/game/WarheadData.cpp \
    src/game/WarheadData.h \
    src/game/WarheadDataList.cpp \
    src/game/WarheadDataList.h \
    src/game/Weapon.cpp \
    src/game/Weapon.h \
    src/game/WeaponData.cpp \
    src/game/WeaponData.h \
    src/game/WeaponDataList.cpp \
    src/game/WeaponDataList.h \
    src/game/weaponspool.cpp \
    src/game/weaponspool.h \
    src/include/fcnc_endian.h \
    src/include/fibheap.h \
    src/include/imageproc.h \
    src/include/Logger.h \
    src/include/sdllayer.h \
    src/misc/args.cpp \
    src/misc/common.cpp \
    src/misc/common.h \
    src/misc/Compression.cpp \
    src/misc/Compression.hpp \
    src/misc/config.h \
    src/misc/fibheap.cpp \
    src/misc/gametypes.h \
    src/misc/IniEntry.h \
    src/misc/INIFile.cpp \
    src/misc/INIFile.h \
    src/misc/INISection.h \
    src/misc/KeyNotFound.cpp \
    src/misc/KeyNotFound.h \
    src/misc/StringTableFile.cpp \
    src/misc/StringTableFile.h \
    src/ui/Button.cpp \
    src/ui/Button.h \
    src/ui/createmode_t.h \
    src/ui/Cursor.cpp \
    src/ui/Cursor.h \
    src/ui/CursorInfo.cpp \
    src/ui/CursorInfo.h \
    src/ui/CursorPool.cpp \
    src/ui/CursorPool.h \
    src/ui/DropDownListBox.cpp \
    src/ui/DropDownListBox.h \
    src/ui/Font.cpp \
    src/ui/Font.h \
    src/ui/FontCache.cpp \
    src/ui/FontCache.h \
    src/ui/FontOptions.h \
    src/ui/Input.cpp \
    src/ui/Input.h \
    src/ui/ListboxClass.cpp \
    src/ui/ListboxClass.h \
    src/ui/ListBoxLine.h \
    src/ui/logger.cpp \
    src/ui/MapAnimationMenu.cpp \
    src/ui/MapAnimationMenu.hpp \
    src/ui/Menu.cpp \
    src/ui/Menu.h \
    src/ui/PauseMenu.cpp \
    src/ui/PauseMenu.h \
    src/ui/RaWindow.cpp \
    src/ui/RaWindow.h \
    src/ui/RA_Label.cpp \
    src/ui/RA_Label.h \
    src/ui/RA_ProgressBar.cpp \
    src/ui/RA_ProgressBar.h \
    src/ui/selection.cpp \
    src/ui/Selection.h \
    src/ui/sidebar.cpp \
    src/ui/Sidebar.h \
    src/ui/SidebarButton.cpp \
    src/ui/SidebarButton.h \
    src/ui/SidebarError.cpp \
    src/ui/SidebarError.h \
    src/ui/SidebarGeometry.h \
    src/ui/sidebarop.h \
    src/ui/TCheckBox.cpp \
    src/ui/TCheckBox.h \
    src/ui/TFontImage.h \
    src/ui/TTextBox.cpp \
    src/ui/TTextBox.h \
    src/vfs/archive.h \
    src/vfs/filesystem/externalvfs.cpp \
    src/vfs/filesystem/externalvfs.h \
    src/vfs/mix/blowfish.cpp \
    src/vfs/mix/blowfish.h \
    src/vfs/mix/mixvfs.cpp \
    src/vfs/mix/mixvfs.h \
    src/vfs/mix/ws-key.cpp \
    src/vfs/mix/ws-key.h \
    src/vfs/VFile.cpp \
    src/vfs/VFile.h \
    src/vfs/vfs.cpp \
    src/vfs/vfs.h \
    src/video/CPSHeader.h \
    src/video/CPSImage.cpp \
    src/video/CPSImage.h \
    src/video/drawmessage.h \
    src/video/Dune2Header.h \
    src/video/Dune2Image.cpp \
    src/video/Dune2Image.h \
    src/video/GraphicsEngine.cpp \
    src/video/GraphicsEngine.h \
    src/video/headerformats.h \
    src/video/imagecache.cpp \
    src/video/ImageCache.h \
    src/video/ImageCacheEntry.cpp \
    src/video/ImageCacheEntry.h \
    src/video/ImageNotFound.cpp \
    src/video/ImageNotFound.h \
    src/video/imageproc.cpp \
    src/video/loadingscreen.cpp \
    src/video/LoadingScreen.h \
    src/video/message.cpp \
    src/video/Message.h \
    src/video/MessagePool.cpp \
    src/video/MessagePool.h \
    src/video/Palettes.h \
    src/video/PCXHeader.h \
    src/video/PCXImage.cpp \
    src/video/PCXImage.h \
    src/video/Renderer.cpp \
    src/video/Renderer.h \
    src/video/sdllayer.cpp \
    src/video/SHPBase.cpp \
    src/video/SHPBase.h \
    src/video/SHPHeader.h \
    src/video/SHPImage.cpp \
    src/video/SHPImage.h \
    src/video/TemplateImage.cpp \
    src/video/TemplateImage.h \
    src/video/VideoError.cpp \
    src/video/VideoError.h \
    src/video/VQAHeader.h \
    src/video/VQAMovie.cpp \
    src/video/VQAMovie.h \
    src/video/WSAError.cpp \
    src/video/WSAError.h \
    src/video/WSAHeader.h \
    src/video/WSAMovie.cpp \
    src/video/WSAMovie.h
    
openredalert_LDFLAGS = $(SDL_CFLAGS)
openredalert_LDADD = $(SDL_LIBS)

INCLUDES = -Isrc/

EXTRA_DIST = src/* data/*
